--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,3 +4,54 @@
   list-style: none;
 }
 
+body{
+  background-color: #2d2c2e;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%23525056' fill-opacity='0.05' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  color: #fff;
+}
+
+a{
+  color: #fff;
+}
+
+a:hover{
+  color: #fff;
+}
+
+.nav-link{
+  padding: 0;
+}
+
+.nav-link:hover{
+ border-bottom: 1px solid #fff;
+}
+
+h1{
+  text-shadow: 2px 2px 8px rgba(2, 2, 2, 0.507);
+  color: #fff;
+  font-weight: bold;
+}
+
+.footer{
+  background-color: rgba(0, 0, 0, 0.5);
+  margin-top: 50px;
+  padding: 20px;
+  width: 100%;
+  text-align: center;
+}
+
+.navbar{
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.dropdown-item{
+  color: #fff;
+}
+
+.dropdown-menu{
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.container{
+  height: 100vh;
+}
