--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,36 +4,43 @@ html(lang='en')
     title= title
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
+    link(rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous")
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js')
-    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
+    script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous")
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    div(class='container-fluid')
+    nav(class="navbar navbar-expand-lg mb-4")
+      a(class="navbar-brand" href='/catalog') Library
+      button(class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation")
+        span(class="navbar-toggler-icon")
+      div(class="collapse navbar-collapse" id="navbarNavAltMarkup")
+        ul(class="navbar-nav ml-3")
+          li(class="nav-item")
+            a(class="nav-link active" href='/catalog') Home
+          li(class="nav-item dropdown")
+            a(class="nav-link" href='#' id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Books
+            div(class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink")
+              a(class="dropdown-item" href='/catalog/books') All books
+              a(class="dropdown-item" href='/catalog/book/create') Create new book
+          li(class="nav-item dropdown")
+            a(class="nav-link" href='#' id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Authors
+            div(class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink")
+              a(class="dropdown-item" href='/catalog/authors') All authors
+              a(class="dropdown-item" href='/catalog/author/create') Create new author
+          li(class="nav-item dropdown")
+            a(class="nav-link" href='#' id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Genres
+            div(class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink")
+              a(class="dropdown-item" href='/catalog/genres') All genres
+              a(class="dropdown-item" href='/catalog/genre/create') Create new genre
+          li(class="nav-item dropdown")
+            a(class="nav-link" href='#' id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Book-instances
+            div(class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink")
+              a(class="dropdown-item" href='/catalog/bookinstances') All book instances
+              a(class="dropdown-item" href='/catalog/bookinstance/create') Create new book instance (copy)
+    div(class='container')
       div(class='row')
-        div(class='col-sm-2')
-          block sidebar
-            ul(class='sidebar-nav')
-              li 
-                a(href='/catalog') Home
-              li 
-                a(href='/catalog/books') All books
-              li 
-                a(href='/catalog/authors') All authors
-              li 
-                a(href='/catalog/genres') All genres
-              li 
-                a(href='/catalog/bookinstances') All book-instances
-              li 
-                hr
-              li 
-                a(href='/catalog/author/create') Create new author
-              li 
-                a(href='/catalog/genre/create') Create new genre
-              li 
-                a(href='/catalog/book/create') Create new book
-              li 
-                a(href='/catalog/bookinstance/create') Create new book instance (copy)
-                
-        div(class='col-sm-10')
+        div(class='col-sm-12')
           block content
+
+    div(class='footer')
+      p #[strong Copyright (c) Ing. Mata Juan. | Todos los derechos reservados]
