second version of app

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -43,4 +43,5 @@ html(lang='en')
           block content
 
     div(class='footer')
-      p #[strong Copyright (c) Ing. Mata Juan. | Todos los derechos reservados]
+      block footer
+      p Copyright (c) Ing. Mata Juan. | Todos los derechos reservados.
