second version for app

--- a/views/author_detail.pug
+++ b/views/author_detail.pug
@@ -22,4 +22,4 @@ block content
   p
    a(href=author.url+'/delete').btn.btn-danger Delete author
   p
-   a(href=author.url+'/update').btn.btn-primary Update author
+   a(href=author.url+'/update').btn.btn-success Update author
