--- a/views/book_detail.pug
+++ b/views/book_detail.pug
@@ -36,4 +36,4 @@ block content
   p
    a(href=book.url+'/delete').btn.btn-danger Delete Book
   p
-   a(href=book.url+'/update').btn.btn-primary Update Book
+   a(href=book.url+'/update').btn.btn-success Update Book
