--- a/views/bookinstance_detail.pug
+++ b/views/bookinstance_detail.pug
@@ -22,4 +22,4 @@ block content
   p
    a(href=bookinstance.url+'/delete').btn.btn-danger Delete bookinstance
   p
-   a(href=bookinstance.url+'/update').btn.btn-primary Update bookinstance
+   a(href=bookinstance.url+'/update').btn.btn-success Update bookinstance
