--- a/views/genre_detail.pug
+++ b/views/genre_detail.pug
@@ -21,4 +21,4 @@ block content
   p
    a(href=genre.url+'/delete').btn.btn-danger Delete genre
   p
-   a(href=genre.url+'/update').btn.btn-primary Update genre
+   a(href=genre.url+'/update').btn.btn-success Update genre
