--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,7 +29,8 @@ h1{
 
 .navbar{
   background-color: rgba(20, 32, 68, 0.5);
-  padding: 10px;
+  padding: 15px;
+  font-size: 18px;
 }
 
 .dropdown-item{
