--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,7 +12,7 @@ html(lang='en')
   body
     nav(class="navbar navbar-expand-lg mb-4")
       a(class="navbar-brand" href='/catalog')
-        i(class="fas fa-book ml-2" style="color: #845ef7;")
+        i(class="fas fa-book ml-2")
       button(class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation")
         span(class="navbar-toggler-icon")
       div(class="collapse navbar-collapse" id="navbarNavAltMarkup")
