--- a/views/book_form.pug
+++ b/views/book_form.pug
@@ -1,14 +1,17 @@
 extends layout
 
 block content
-  h1= title
+  if(h1= title === 'Update Book')
+    h1(class="mb-4") Editar Libro
+  else
+    h1(class="mb-4") Crear Libro
 
   form(method='POST' action='')
     div.form-group
-      label(for='title') Title:
+      label(for='title') Titulo:
       input#title.form-control(type='text', placeholder='Name of book' name='title' required='true' value=(undefined===book ? '' : book.title) )
     div.form-group
-      label(for='author') Author:
+      label(for='author') Autor:
       select#author.form-control(type='select' placeholder='Select author' name='author' required='true' )
         for author in authors
           if book
@@ -23,19 +26,31 @@ block content
           else
             option(value=author._id) #{author.name}
     div.form-group
-      label(for='summary') Summary:
+      label(for='summary') Síntesis:
       textarea#summary.form-control(type='textarea', placeholder='Summary' name='summary' rows='3' required='true') #{undefined===book ? '' : book.summary}
     div.form-group
-      label(for='isbn') ISBN:
+      label(for='isbn') Codigo:
       input#isbn.form-control(type='text', placeholder='ISBN13' name='isbn' value=(undefined===book ? '' : book.isbn) required='true') 
     div.form-group
-      label Genre:
-      div
+      label(for='genre') Genero:
+      select#genre.form-control(type='select' placeholder='Select genre' name='genre' required='true' )
         for genre in genres
-          div(style='display: inline; padding-right:10px;')
-            input.checkbox-input(type='checkbox', name='genre', id=genre._id, value=genre._id, checked=genre.checked )
-            label(for=genre._id) #{genre.name}
-    button.btn.btn-success(type='submit') Submit
+          if book
+            //- Handle GET form, where book.genre is an object, and POST form, where it is a string.
+            option(
+              value=genre._id
+              selected=(
+                genre._id.toString()==book.genre._id
+                || genre._id.toString()==book.genre
+              ) ? 'selected' : false
+            ) #{genre.name}
+          else
+            option(value=genre._id) #{genre.name}
+    button.btn.btn-success(type='submit' class="mb-5" data-toggle="tooltip" data-placement="left" title="Regresar") Guardar
+
+    div(class="icon-return")
+      a(href='/catalog/books' data-toggle="tooltip" data-placement="left" title="Regresar")
+        i(class="fas fa-arrow-alt-circle-left mb-5" style="font-size:35px;color: #339af0")
 
   if errors 
     ul
