--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,35 +2,31 @@ body{
   color: #000000;
 }
 
-a{
-  color: #000000;
-}
-
-a:hover{
-  color: #000000;
-}
-
 .nav-link:hover{
- color: #fff;
+ background-color: rgb(255, 255, 255, 0.8);
+ color:rgb(20, 16, 16);
+ border-radius: 10px;
 }
 
-h1{
-  text-shadow: 2px 2px 8px rgba(2, 2, 2, 0.507);
-  color: #000000;
-}
+.nav-link{
+  color: #fff;
+ }
 
 .footer{
-  background-color: rgba(20, 32, 68, 0.5);
-  margin-top: 50px;
+  background-color: rgb(20, 16, 16);
+  margin-top: 80px;
   padding: 15px;
+  bottom: 0;
   width: 100%;
   text-align: center;
+  color: #fff;
 }
 
 .navbar{
-  background-color: rgba(20, 32, 68, 0.5);
+  background-color: rgb(20, 16, 16);
   padding: 15px;
   font-size: 18px;
+  color: white;
 }
 
 .dropdown-item{
@@ -41,12 +37,77 @@ h1{
   background-color: rgba(0, 0, 0, 0.8);
 }
 
-.container{
+.container2{
   min-height: 100vh;
+}
+
+a{
+  color: #000000;
 }
 
 @media (max-width: 500px){
   h1{
     font-size: 25px;
   }
+
+  .nav-link{
+    text-align: center;
+  }
+
 }
+
+/*cards */
+
+.container .body-color1{
+  background-color:#339af0;
+  color: #fff;
+}
+
+.container .body-color2{
+  background-color:#20c997;
+  color: #fff;
+}
+
+.container .body-color3{
+  background-color: #845ef7;
+  color: #fff;
+}
+
+.container .body-color4{
+  background-color: #ff922b;
+  color: #fff;
+}
+
+.container .body-color5{
+  background-color: #f06595;
+  color: #fff;
+}
+
+.container .p-title{
+  font-size: 1em;
+}
+
+.v-title{
+  font-size: 1.5em;
+}
+
+/*Table*/
+
+.table .table-hover:hover{
+  background-color: #f5f5f5;
+}
+
+.table .table-hover a{
+  text-decoration: none !important;
+  color: rgb(107, 107, 107);
+}
+
+.icon-return{
+  text-align: end;
+}
+
+.layout{
+  display: flex;
+  flex-direction: row;
+}
+
