--- a/views/author_detail.pug
+++ b/views/author_detail.pug
@@ -2,12 +2,12 @@ extends layout
 
 block content
 
-  h1 Author: #{author.name}
+  h1 #{author.name}
   p #{author.lifespan}
   
   div(style='margin-left:20px;margin-top:20px')
 
-    h4 Books
+    h4 Libros
     
     dl
       each book in author_books
@@ -16,10 +16,8 @@ block content
         dd #{book.summary}
 
       else
-        p This author has no books.
-
-  hr
-  p
-   a(href=author.url+'/delete').btn.btn-danger Delete author
-  p
-   a(href=author.url+'/update').btn.btn-success Update author
+        p Este autor no tiene libros.
+  
+  div(class="icon-return")
+    a(href='/catalog/authors' data-toggle="tooltip" data-placement="left" title="Regresar")
+      i(class="fas fa-arrow-alt-circle-left mb-5 mt-5" style="font-size:35px;color: #339af0")
