--- a/views/book_detail.pug
+++ b/views/book_detail.pug
@@ -1,39 +1,40 @@
 extends layout
 
 block content
-  h1 Title: #{book.title}
+  h1(class="mb-4") #{book.title}
   
-  p #[strong Author:] 
+  p #[strong Autor:] 
     a(href=book.author.url) #{book.author.name}
-  p #[strong Summary:] #{book.summary}
-  p #[strong ISBN:] #{book.isbn}
-  p #[strong Genre:]&nbsp;
+  p #[strong Síntesis:] #{book.summary}
+  p #[strong Código:] #{book.isbn}
+  p #[strong Genero:]&nbsp;
     each val, index in book.genre
       a(href=val.url) #{val.name}
       if index < book.genre.length - 1
         |, 
   
-  div(style='margin-left:20px;margin-top:20px')
-    h4 Copies
+  div(style='margin-left:20px;margin-top:20px' class="mb-5")
+    h4 Copias
     
     each val in book_instances
       hr
-      if val.status=='Available'
+      if val.status=='Disponible'
         p.text-success #{val.status}
-      else if val.status=='Maintenance'
+      else if val.status=='Mantenimiento'
         p.text-danger #{val.status}
       else
         p.text-warning #{val.status} 
-      p #[strong Imprint:] #{val.imprint}
-      if val.status!='Available'
-        p #[strong Due back:] #{val.due_back}
+      p #[strong Síntesis:] #{val.imprint}
+      if val.status!='Disponible'
+        p #[strong Disponible para:] #{val.due_back_formatted}
       p #[strong Id:]&nbsp;
         a(href=val.url) #{val._id}
  
     else
-      p There are no copies of this book in the library.
-  hr
-  p
-   a(href=book.url+'/delete').btn.btn-danger Delete Book
-  p
-   a(href=book.url+'/update').btn.btn-success Update Book
+      p No existen copias del libro en la libreria.
+  
+  div(class="icon-return")
+    a(href='/catalog/books' data-toggle="tooltip" data-placement="left" title="Regresar")
+      i(class="fas fa-arrow-alt-circle-left mb-5" style="font-size:35px;color: #339af0")
+
+
