--- a/views/bookinstance_delete.pug
+++ b/views/bookinstance_delete.pug
@@ -2,32 +2,36 @@ extends layout
 
 block content
 
-  h1= title
+  h1(class="mb-4") Eliminar Sumario
   
-  p #[strong Do you really want to delete this BookInstance?]
+  p #[strong Estas seguro que desea eliminar el siguiente sumario?]
   
   div(style="margin-left:20px")
 
     p #[strong ID]: #{bookinstance._id}
   
-    p #[strong Title:] 
+    p #[strong Titulo:] 
       a(href=bookinstance.book.url) #{bookinstance.book.title}
     
-    p #[strong Imprint:] #{bookinstance.imprint}
+    p #[strong Edicion:] #{bookinstance.imprint}
 
-    p #[strong Status:] 
-      if bookinstance.status=='Available'
+    p #[strong Estatus:] 
+      if bookinstance.status=='Disponible'
         span.text-success #{bookinstance.status}
-      else if bookinstance.status=='Maintenance'
+      else if bookinstance.status=='Mantenimiento'
         span.text-danger #{bookinstance.status}
       else
         span.text-warning #{bookinstance.status} 
       
-    if bookinstance.status!='Available'
-      p #[strong Due back:] #{bookinstance.due_back_formatted}
+    if bookinstance.status!='Disponible'
+      p #[strong Disponible para:] #{bookinstance.due_back_formatted}
 
   form(method='POST' action='')
     div.form-group
       input#id.form-control(type='hidden',name='id', required='true', value=bookinstance._id )
 
-    button.btn.btn-danger(type='submit') Delete
+    button.btn.btn-danger(type='submit') Eliminar
+
+  div(class="icon-return")
+      a(href='/catalog/bookinstances' data-toggle="tooltip" data-placement="left" title="Regresar")
+        i(class="fas fa-arrow-alt-circle-left mb-5 mt-5" style="font-size:35px;color: #339af0")
