--- a/views/bookinstance_detail.pug
+++ b/views/bookinstance_detail.pug
@@ -4,22 +4,21 @@ block content
 
   h1 ID: #{bookinstance._id}
   
-  p #[strong Title:] 
+  p #[strong Titulo:] 
     a(href=bookinstance.book.url) #{bookinstance.book.title}
-  p #[strong Imprint:] #{bookinstance.imprint}
+  p #[strong Edicion:] #{bookinstance.imprint}
 
-  p #[strong Status:] 
-    if bookinstance.status=='Available'
+  p #[strong Estatus:] 
+    if bookinstance.status=='Disponible'
       span.text-success #{bookinstance.status}
-    else if bookinstance.status=='Maintenance'
+    else if bookinstance.status=='Mantenimiento'
       span.text-danger #{bookinstance.status}
     else
       span.text-warning #{bookinstance.status} 
       
-  if bookinstance.status!='Available'
-    p #[strong Due back:] #{bookinstance.due_back_formatted}
-  hr
-  p
-   a(href=bookinstance.url+'/delete').btn.btn-danger Delete bookinstance
-  p
-   a(href=bookinstance.url+'/update').btn.btn-success Update bookinstance
+  if bookinstance.status!='Disponible'
+    p #[strong Disponible para:] #{bookinstance.due_back_formatted}
+
+  div(class="icon-return")
+      a(href='/catalog/bookinstances' data-toggle="tooltip" data-placement="left" title="Regresar")
+        i(class="fas fa-arrow-alt-circle-left mb-5 mt-5" style="font-size:35px;color: #339af0")
