--- a/views/genre_detail.pug
+++ b/views/genre_detail.pug
@@ -2,11 +2,11 @@ extends layout
 
 block content
 
-  h1 Genre: #{genre.name}
+  h1 #{genre.name}
   
   div(style='margin-left:20px;margin-top:20px')
 
-    h4 Books
+    h4 Libros
     
     dl
       each book in genre_books
@@ -15,10 +15,8 @@ block content
         dd #{book.summary}
 
       else
-        p This genre has no books
-  hr
+        p Este genero no tiene libros
 
-  p
-   a(href=genre.url+'/delete').btn.btn-danger Delete genre
-  p
-   a(href=genre.url+'/update').btn.btn-success Update genre
+  div(class="icon-return")
+      a(href='/catalog/genres' data-toggle="tooltip" data-placement="left" title="Regresar")
+        i(class="fas fa-arrow-alt-circle-left mb-5 mt-5" style="font-size:35px;color: #339af0")
