--- a/views/index.pug
+++ b/views/index.pug
@@ -1,19 +1,61 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #[em LocalLibrary], a very basic Express website developed as a tutorial example on the Mozilla Developer Network.
-
-  h1 Dynamic content
+  h1 Bienvenido a la Libreria de Jo An.
+  h5 Encuentre el libro que busca en nuestro catálogo de más de 5,000 volúmenes.
 
   if error
     p Error getting dynamic content.
   else
-    p The library has the following record counts:
+    
+    div(class="container-fluid")
+      div(class="row")
+        div(class="col-sm-4 mt-5")
+          div(class="card")
+            div(class="container")
+              div(class="row row-cols-2 text-center")
+                div(class="col-sm-6 p-2")
+                  i(class="fas fa-book p-3" style="font-size:36px;color: #339af0")
+                div(class="col-sm-6 pt-3 body-color1")
+                  p(class="m-0 v-title") !{data.book_count}+
+                    p(class="p-title") Libros
 
-    ul
-      li #[strong Books:] !{data.book_count}
-      li #[strong Copies:] !{data.book_instance_count}
-      li #[strong Copies available:] !{data.book_instance_available_count} 
-      li #[strong Authors:] !{data.author_count}
-      li #[strong Genres:] !{data.genre_count}
+        div(class="col-sm-4 mt-5")
+          div(class="card")
+            div(class="container")
+              div(class="row row-cols-2 text-center")
+                div(class="col-sm-6 p-2")
+                  i(class="far fa-copy p-3" style="color: #20c997;font-size:36px")
+                div(class="col-sm-6 pt-3 body-color2")
+                  p(class="m-0 v-title") !{data.book_instance_count}+
+                    p(class="p-title") Copias
+
+        div(class="col-sm-4 mt-5")
+          div(class="card")
+            div(class="container")
+              div(class="row row-cols-2 text-center")
+                div(class="col-sm-6 p-2")
+                  i(class="fas fa-copy p-3" style="color: #845ef7;font-size:36px")
+                div(class="col-sm-6 pt-3 body-color3")
+                  p(class="m-0 v-title") !{data.book_instance_Disponible_count}+
+                    p(class="p-title") Copias Disponibles
+
+        div(class="col-sm-4 mt-5")
+          div(class="card")
+            div(class="container")
+              div(class="row row-cols-2 text-center")
+                div(class="col-sm-6 p-2")
+                  i(class="fas fa-user-tie p-3" style="color: #ff922b;font-size:36px")
+                div(class="col-sm-6 pt-3 body-color4")
+                  p(class="m-0 v-title") !{data.author_count}+
+                    p(class="p-title") Autores
+
+        div(class="col-sm-4 mt-5 mb-5")
+          div(class="card")
+            div(class="container")
+              div(class="row row-cols-2 text-center")
+                div(class="col-sm-6 p-2")
+                  i(class="fas fa-pen-nib p-3" style="color: #f06595;font-size:36px")
+                div(class="col-sm-6 pt-3 body-color5")
+                  p(class="m-0 v-title") !{data.genre_count}+
+                    p(class="p-title") Generos
