--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,38 +7,29 @@ html(lang='en')
     link(rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous")
     link(rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous")
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js')
-    script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous")
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     nav(class="navbar navbar-expand-lg mb-4")
-      a(class="navbar-brand" href='/catalog')
-        i(class="fas fa-book ml-2")
+      img(src="../../../images/libroicono.png" style="width:35px", alt="")
+      span(class="ml-2") #[strong Librería Jo An]
       button(class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation")
         span(class="navbar-toggler-icon")
       div(class="collapse navbar-collapse" id="navbarNavAltMarkup")
-        ul(class="navbar-nav ml-2")
+        ul(class="navbar-nav ml-auto")
           li(class="nav-item")
-            a(class="nav-link active" href='/catalog') Home
-          li(class="nav-item dropdown")
-            a(class="nav-link" href='#' id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Books
-            div(class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink")
-              a(class="dropdown-item" href='/catalog/books') All books
-              a(class="dropdown-item" href='/catalog/book/create') Create new book
-          li(class="nav-item dropdown")
-            a(class="nav-link" href='#' id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Authors
-            div(class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink")
-              a(class="dropdown-item" href='/catalog/authors') All authors
-              a(class="dropdown-item" href='/catalog/author/create') Create new author
-          li(class="nav-item dropdown")
-            a(class="nav-link" href='#' id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Genres
-            div(class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink")
-              a(class="dropdown-item" href='/catalog/genres') All genres
-              a(class="dropdown-item" href='/catalog/genre/create') Create new genre
-          li(class="nav-item dropdown")
-            a(class="nav-link" href='#' id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Book-instances
-            div(class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink")
-              a(class="dropdown-item" href='/catalog/bookinstances') All book instances
-              a(class="dropdown-item" href='/catalog/bookinstance/create') Create new book instance (copy)
+            a(class="nav-link active" href='/catalog') Inicio
+          li(class="nav-item")
+            a(class="nav-link" href='/catalog/books') Nuestros Libros
+          li(class="nav-item")
+            a(class="nav-link" href='/catalog/authors') Autores
+          li(class="nav-item")
+            a(class="nav-link" href='/catalog/genres') Generos
+          li(class="nav-item")
+            a(class="nav-link" href='/catalog/bookinstances') Sumario
+
     div(class='container')
       div(class='row')
         div(class='col-sm-12')
