--- a/views/bookinstance_list.pug
+++ b/views/bookinstance_list.pug
@@ -6,7 +6,7 @@ block content
     a(href='/catalog/bookinstance/create' class="btn btn-success mt-4") Nuevo Registro
   
   div(class="container")
-    table(class="table mt-5 mb-5")
+    table(class="table table-responsive-md mt-5 mb-5")
       thead
         tr
           th Libro
