--- a/views/book_list.pug
+++ b/views/book_list.pug
@@ -2,8 +2,10 @@ extends layout
 
 block content
   h1 Lista de Libros
-  p
-    a(href='/catalog/book/create' class="btn btn-success mt-4") Nuevo Libro
+  
+  a(href='/catalog/book/create' class="btn btn-success mt-4")
+    i(class="fas fa-plus")
+      span(class="ml-2 text-createbook") Nuevo Libro
   
   div(class="container")
     table(class="table mt-5 mb-5")
@@ -21,8 +23,21 @@ block content
             td 
               a(href=book.url+'/update')
                 i(class="fas fa-pencil-alt pr-2")
-              a(href=book.url+'/delete')
-                i(class="fas fa-trash-alt pr-2")
+
+              i(class="fas fa-trash-alt pr-2" type="button" data-toggle="modal" data-target="#myModal-" + book._id)
+                .modal.fade(id=("myModal-" + book._id) tabindex="-1" role="dialog" aria-labelledby=("myModalLabel" + book._id) aria-hidden="true")
+                  .modal-dialog
+                    .modal-content
+                      .modal-header
+                        h4.modal-title(id=("myModalLabel" + book._id)) #{book.title}
+                      .modal-footer
+                        p(class="mb-3 mr-auto") Estas seguro que deseas eliminar este libro?
+                        form.formdat(method='POST' action=book.url+'/delete')
+                          div.form-group
+                            input#id.form-control(type='hidden',name='id', required='true', value=book._id )
+                          button.btn.btn-danger(type='submit') Eliminar
+                          button.btn.btn-primary(type="button",data-dismiss="modal", class="ml-2") Cancelar
+
               a(href=book.url)
                 i(class="fas fa-info pr-2")
         else
