--- a/views/book_form.pug
+++ b/views/book_form.pug
@@ -46,11 +46,11 @@ block content
             ) #{genre.name}
           else
             option(value=genre._id) #{genre.name}
-    button.btn.btn-success(type='submit' class="mb-5" data-toggle="tooltip" data-placement="left" title="Regresar") Guardar
+    button.btn.btn-success(type='submit' class="mb-5" data-toggle="tooltip" data-placement="left" title="Guardar") Guardar
 
     div(class="icon-return")
-      a(href='/catalog/books' data-toggle="tooltip" data-placement="left" title="Regresar")
-        i(class="fas fa-arrow-alt-circle-left mb-5" style="font-size:35px;color: #339af0")
+      a(href='/catalog/books' data-toggle="tooltip" data-placement="left" title="Regresar" class="btn previous") &laquo; Regresar
+
 
   if errors 
     ul
