--- a/views/bookinstance_form.pug
+++ b/views/bookinstance_form.pug
@@ -37,5 +37,4 @@ block content
         li!= error.msg
 
   div(class="icon-return")
-      a(href='/catalog/bookinstances' data-toggle="tooltip" data-placement="left" title="Regresar")
-        i(class="fas fa-arrow-alt-circle-left mb-5 mt-5" style="font-size:35px;color: #339af0")
+      a(href='/catalog/bookinstances' data-toggle="tooltip" data-placement="left" title="Regresar" class="btn previous") &laquo; Regresar
