--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,7 +14,7 @@ body{
 
 .footer{
   background-color: rgb(20, 16, 16);
-  margin-top: 80px;
+  margin-top: 140px;
   padding: 15px;
   bottom: 0;
   width: 100%;
@@ -45,9 +45,11 @@ a{
   color: #000000;
 }
 
+
 @media (max-width: 500px){
+  
   h1{
-    font-size: 25px;
+    font-size: 22px;
   }
 
   .nav-link{
@@ -83,7 +85,7 @@ a{
   color: #fff;
 }
 
-.container .p-title{
+.p-title{
   font-size: 1em;
 }
 
@@ -102,8 +104,33 @@ a{
   color: rgb(107, 107, 107);
 }
 
+.table .table-hover i{
+  text-decoration: none;
+  color: rgb(107, 107, 107);
+}
+
+.table .table-hover i:hover{
+  text-decoration: none;
+  color: #339af0;
+}
+
 .icon-return{
   text-align: end;
+  margin-top: 100px;
+}
+
+.previous{
+  font-size:20px;
+  color: #f5f5f5; 
+  background-color:rgb(20, 16, 16);
+  padding:10px;
+  text-decoration: none;
+}
+
+.previous:hover{
+  background-color: #ddd;
+  text-decoration: none;
+  color: black;
 }
 
 .layout{
@@ -111,3 +138,28 @@ a{
   flex-direction: row;
 }
 
+.modal-dialog h4{
+  font-size: 25px;
+}
+
+.modal-dialog h4,
+.modal-dialog p{
+  color: #000;
+}
+
+.modal-dialog p{
+  font-size: 16px;
+}
+
+.modal-header{
+  background-color: rgb(230, 228, 228);
+}
+
+.modal{
+  cursor: default;
+}
+
+.text-createbook{
+  font-family: Helvetica;
+  font-size: 14px;
+}
