--- a/views/author_detail.pug
+++ b/views/author_detail.pug
@@ -19,5 +19,4 @@ block content
         p Este autor no tiene libros.
   
   div(class="icon-return")
-    a(href='/catalog/authors' data-toggle="tooltip" data-placement="left" title="Regresar")
-      i(class="fas fa-arrow-alt-circle-left mb-5 mt-5" style="font-size:35px;color: #339af0")
+    a(href='/catalog/authors' data-toggle="tooltip" data-placement="left" title="Regresar" class="btn previous")  &laquo; Regresar
