--- a/views/author_list.pug
+++ b/views/author_list.pug
@@ -2,8 +2,8 @@ extends layout
 
 block content
   h1 Lista de Autores
-  p
-    a(href='/catalog/author/create' class="btn btn-success mt-4") Nuevo Autor
+  div(class="container")
+    a(href='/catalog/author/create' class="btn btn-success mt-4" style="padding:10px") + Nuevo Autor
   
   div(class="container")
     table(class="table table-responsive-md mt-5 mb-5")
@@ -20,8 +20,20 @@ block content
             td 
               a(href=author.url+'/update')
                 i(class="fas fa-pencil-alt pr-2")
-              a(href=author.url+'/delete')
-                i(class="fas fa-trash-alt pr-2")
+              i(class="fas fa-trash-alt pr-2" type="button" data-toggle="modal" data-target="#myModal-" + author._id)
+                .modal.fade(id=("myModal-" + author._id) tabindex="-1" role="dialog" aria-labelledby=("myModalLabel" + author._id) aria-hidden="true")
+                  .modal-dialog
+                    .modal-content
+                      .modal-header
+                        h4.modal-title(id=("myModalLabel" + author._id)) #{author.name}
+                      .modal-footer
+                        p(class="mb-3 mr-auto") Estas seguro que deseas eliminar este Autor?
+                        form.formdat(method='POST' action=author.url+'/delete')
+                          div.form-group
+                            input#id.form-control(type='hidden',name='authorid', required='true', value=author._id )
+                          button.btn.btn-danger(type='submit') Eliminar
+                          button.btn.btn-primary(type="button",data-dismiss="modal", class="ml-2") Cancelar
+
               a(href=author.url)
                 i(class="fas fa-info pr-2")
         else
