--- a/views/book_list.pug
+++ b/views/book_list.pug
@@ -3,9 +3,8 @@ extends layout
 block content
   h1 Lista de Libros
   
-  a(href='/catalog/book/create' class="btn btn-success mt-4")
-    i(class="fas fa-plus")
-      span(class="ml-2 text-createbook") Nuevo Libro
+  div(class="container")
+    a(href='/catalog/book/create' class="btn btn-success mt-4" style="padding:10px") + Nuevo Libro
   
   div(class="container")
     table(class="table mt-5 mb-5")
