--- a/views/author_list.pug
+++ b/views/author_list.pug
@@ -2,17 +2,18 @@ extends layout
 
 block content
   h1 Lista de Autores
-  div(class="container")
+  div(class="container mb-5")
     a(href='/catalog/author/create' class="btn btn-success mt-4" style="padding:10px") + Nuevo Autor
   
   div(class="container")
-    table(class="table table-responsive-md mt-5 mb-5")
+    table(class="table table-responsive-md mt-5 mb-5" id="table_id")
       thead
         tr
           th Nombre
           th Fecha Nacimiento/Defuncion
           th Acciones
 
+      tbody
         each author in author_list
          tr(class="table-hover")
             td #{author.name}
@@ -20,21 +21,26 @@ block content
             td 
               a(href=author.url+'/update')
                 i(class="fas fa-pencil-alt pr-2")
-              i(class="fas fa-trash-alt pr-2" type="button" data-toggle="modal" data-target="#myModal-" + author._id)
-                .modal.fade(id=("myModal-" + author._id) tabindex="-1" role="dialog" aria-labelledby=("myModalLabel" + author._id) aria-hidden="true")
-                  .modal-dialog
-                    .modal-content
-                      .modal-header
-                        h4.modal-title(id=("myModalLabel" + author._id)) #{author.name}
-                      .modal-footer
-                        p(class="mb-3 mr-auto") Estas seguro que deseas eliminar este Autor?
-                        form.formdat(method='POST' action=author.url+'/delete')
-                          div.form-group
-                            input#id.form-control(type='hidden',name='authorid', required='true', value=author._id )
-                          button.btn.btn-danger(type='submit') Eliminar
-                          button.btn.btn-primary(type="button",data-dismiss="modal", class="ml-2") Cancelar
-
+              
+              a(href="javascript:void(0);" class="delete-author" data-id=author._id)
+                i(class="fas fa-trash-alt pr-2")
+              
               a(href=author.url)
                 i(class="fas fa-info pr-2")
         else
           li There are no authors.
+  
+  form(action='' method='POST' id="myFormAuthor")
+    div(class="modal fade" id="DeleteModalAuthor" tabindex="-1" aria-labelledby="myModalLabel" aria-hidden="true")
+      div(class="modal-dialog")
+        div(class="modal-content")
+          div(class="modal-header")
+            h5(class="modal-title" id="myModalLabel") Eliminar
+            button(type="button" class="close" data-dismiss="modal" aria-label="Close")
+              span(aria-hidden="true") &times;
+          div(class="modal-body")
+            strong Estas seguro que desea eliminar este Autor?
+          div( class="modal-footer")
+            input(type="hidden" name="authorid" class="form-control author_id" required='true')
+            button(type="button" class="btn btn-default" data-dismiss="modal") Cancelar
+            button(type="submit" class="btn btn-danger") Eliminar
