--- a/views/book_list.pug
+++ b/views/book_list.pug
@@ -3,17 +3,18 @@ extends layout
 block content
   h1 Lista de Libros
   
-  div(class="container")
+  div(class="container mb-5")
     a(href='/catalog/book/create' class="btn btn-success mt-4" style="padding:10px") + Nuevo Libro
   
   div(class="container")
-    table(class="table mt-5 mb-5")
+    table(class="table mt-5 mb-5" id="table_id")
       thead
         tr
           th Libros
           th Autor
           th Acciones
-
+          
+      tbody
         - book_list.sort(function(a, b) {let textA = a.title.toUpperCase(); let textB = b.title.toUpperCase(); return (textA < textB) ? -1 : (textA > textB) ? 1 : 0;});
         each book in book_list
          tr(class="table-hover")
@@ -23,21 +24,25 @@ block content
               a(href=book.url+'/update')
                 i(class="fas fa-pencil-alt pr-2")
 
-              i(class="fas fa-trash-alt pr-2" type="button" data-toggle="modal" data-target="#myModal-" + book._id)
-                .modal.fade(id=("myModal-" + book._id) tabindex="-1" role="dialog" aria-labelledby=("myModalLabel" + book._id) aria-hidden="true")
-                  .modal-dialog
-                    .modal-content
-                      .modal-header
-                        h4.modal-title(id=("myModalLabel" + book._id)) #{book.title}
-                      .modal-footer
-                        p(class="mb-3 mr-auto") Estas seguro que deseas eliminar este libro?
-                        form.formdat(method='POST' action=book.url+'/delete')
-                          div.form-group
-                            input#id.form-control(type='hidden',name='id', required='true', value=book._id )
-                          button.btn.btn-danger(type='submit') Eliminar
-                          button.btn.btn-primary(type="button",data-dismiss="modal", class="ml-2") Cancelar
+              a(href="javascript:void(0);" class="delete-book" data-id=book._id)
+                i(class="fas fa-trash-alt pr-2")
 
               a(href=book.url)
                 i(class="fas fa-info pr-2")
         else
           li There are no books.
+  
+  form(action='' method='POST' id="myFormBook")
+    div(class="modal fade" id="DeleteModalBook" tabindex="-1" aria-labelledby="myModalLabel" aria-hidden="true")
+      div(class="modal-dialog")
+        div(class="modal-content")
+          div(class="modal-header")
+            h5(class="modal-title" id="myModalLabel") Eliminar
+            button(type="button" class="close" data-dismiss="modal" aria-label="Close")
+              span(aria-hidden="true") &times;
+          div(class="modal-body")
+            strong Estas seguro que desea eliminar este Sumario?
+          div( class="modal-footer")
+            input(type="hidden" name="id" class="form-control book_id" required='true')
+            button(type="button" class="btn btn-default" data-dismiss="modal") Cancelar
+            button(type="submit" class="btn btn-danger") Eliminar
